# pyspark_huggingface

./: .gitignore  README.md  demo.ipynb  pyproject.toml  requirements.txt
pyspark_huggingface/: __init__.py  huggingface.py  huggingface_sink.py  huggingface_source.py
pyspark_huggingface/compat/: datasource.py
tests/: test_huggingface.py  test_huggingface_writer.py
