[project]
name = "pyspark-huggingface-fork"
version = "1.0.0"
description = "A DataSource for reading and writing HuggingFace Datasets in Spark"
authors = [
    {name = "allisonwang-db", email = "allison.wang@databricks.com"},
    {name = "lhoestq", email = "quentin@huggingface.co"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.2",
    "huggingface_hub>=0.27.1",
    "pyspark>=3.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.14.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyspark_huggingface"]
